--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Hammersmith+One&family=Hanuman:wght@100;300;400;700;900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jomolhari&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 @import "tailwindcss";
 
-@theme {
-  --font-Jomolhari: "Jomolhari", sans-serif;
-  --font-Hammersmith One: "Hammersmith One", sans-serif;
-  --font-Halant: "Halant", sans-serif;
-  --font-Hanuman: "Hanuman", sans-serif;
-  --font-Inter: "Inter", sans-serif;
-  --font-Roboto: "Roboto", sans-serif;
-  --font-Open Sans: "Open Sans", sans-serif
-  --font-Nunito: "Nunito", sans-serif
+:root {
+  --font-jomolhari: "Jomolhari", sans-serif;
+  --font-hammersmith-one: "Hammersmith One", sans-serif;
+  --font-halant: "Halant", sans-serif;
+  --font-hanuman: "Hanuman", sans-serif;
+  --font-inter: "Inter", sans-serif;
+  --font-roboto: "Roboto", sans-serif;
+  --font-open-sans: "Open Sans", sans-serif;
+  --font-nunito: "Nunito", sans-serif;
 }
 
 @tailwind base;
@@ -22,7 +23,6 @@
       opacity: 0;
       transform: translateY(20px);
     }
-
     to {
       opacity: 1;
       transform: translateY(0);
